--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,10 +9,10 @@
 </head>
 
 <body class="bg-gray-100">
-    <div class="full w-full hidden h-screen bg-white">
+    <div class="full w-full h-screen bg-white">
         <div class="boxname bg-zinc-200 absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 p-3 rounded-lg">
             <input class="inputname p-2 rounded-sm outline-none bg-transparent" type="text" placeholder="enter your name">
-            <button class="p-2 rounded-sm bg-blue-500 text-white">name set</button>
+            <button class="name-send p-2 rounded-sm bg-blue-500 text-white">name set</button>
         </div>
     </div>
     <div class="flex items-center justify-center h-screen">
