--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 </head>
 
 <body class="bg-gray-100">
-    <div class="full w-full h-screen bg-white">
+    <div class="full w-full h-screen absolute top-0 left-0 bg-white">
         <div class="boxname bg-zinc-200 absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 p-3 rounded-lg">
             <input class="inputname p-2 rounded-sm outline-none bg-transparent" type="text" placeholder="enter your name">
             <button class="name-send p-2 rounded-sm bg-blue-500 text-white">name set</button>
@@ -18,7 +18,7 @@
     <div class="flex items-center justify-center h-screen">
         <div class="w-full max-w-md p-4 bg-white rounded-lg shadow-md">
             <div class="flex justify-between items-center border-b">
-                <div class="uppr flex items-center gap-5"><div class="hash flex flex-col"><h2 class="text-xl font-semibold">Chat Room </h2><span class="online text-sm font-light">2 user are online</span> </div> <span class="font-extralight text-sm"><i id="type">Typing indicator</i></span></div>
+                <div class="uppr flex items-center gap-5"><div class="hash flex flex-col"><h2 class="text-xl font-semibold">Chat Room </h2><span class="online text-sm font-light">1 user are online</span> </div> <span class="font-extralight text-sm"><i id="type">Typing indicator</i></span></div>
                 <button class="text-blue-500 hover:underline">Logout</button>
             </div>
             <div id="chatBox" class="message-container h-80 overflow-y-auto py-4">
