--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
     <div class="flex items-center justify-center h-screen">
         <div class="w-full max-w-md p-4 bg-white rounded-lg shadow-md">
             <div class="flex justify-between items-center border-b">
-                <div class="uppr flex items-center gap-5"><div class="hash flex flex-col"><h2 class="text-xl font-semibold">Chat Room </h2><span class="online text-sm font-light">1 user are online</span> </div> <span class="font-extralight text-sm"><i id="type">Typing indicator</i></span></div>
+                <div class="uppr flex items-center gap-5"><div class="hash flex flex-col"><h2 class="text-xl font-semibold">Chat Room </h2><span class="online text-sm font-light">1 user are online</span> </div> <span class="font-extralight text-sm"><i id="type"></i></span></div>
                 <button class="text-blue-500 hover:underline">Logout</button>
             </div>
             <div id="chatBox" class="message-container h-80 overflow-y-auto py-4">
